Revert "Jackson 3-migrering for Ktor-appene (#138)" (#141)
This reverts commit 1e0a14444f8036596b163303e289c6ab1233b1c9.